--- a/Kata005/Kata005.csproj
+++ b/Kata005/Kata005.csproj
@@ -9,4 +9,8 @@
     <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="SimpleInjector" Version="4.6.0" />
+  </ItemGroup>
+
 </Project>
